ecr image pulling

--- a/deployment-phpapp.yaml
+++ b/deployment-phpapp.yaml
@@ -21,6 +21,7 @@ spec:
       containers:
       - name: app-container
         image: praveenedulakanti/phpapp:env_assign
+        #image: 863XXXX115.dkr.ecr.ap-south-1.amazonaws.com/webapp/repo:latest
         readinessProbe:
           httpGet:
             path: /index.html
