--- a/persistentVolumeClaim.yml
+++ b/persistentVolumeClaim.yml
@@ -5,8 +5,9 @@ metadata:
   name: mysql-data-disk
   namespace: database-namespace
 spec:
+  storageClassName: cloud-ssd      
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 7Gi
